--- a/apps/startPage/static/startPage/css/style.css
+++ b/apps/startPage/static/startPage/css/style.css
@@ -1,64 +1,14 @@
-* {
-  padding: 0;
-  margin: 0;
-}
-a {
-  text-decoration: none;
-}
-.header {
-  width: 100%;
-  height: 65px;
-  background-color: #f2f2f2;
-  position: fixed;
-  z-index: 10;
-}
-.header_content {
-  min-width: 500px;
-  height: 100%;
-  display: flex;
-  margin: 0 auto;
-  justify-content: space-between;
-}
-.logo {
-  margin: auto 23px;
-}
-.menu {
-  margin: auto 23px;
-}
-.search {
-  margin: auto 23px;
-  width: 700px;
-  height: 35px;
-  border: 1px solid black;
-  border-radius: 25px;
-}
-.main {
-  display: flex;
-
-}
-.side_menu {
-  min-height: 100%;
-  width: 15%;
-  background-color: #f2f2f2;
-}
-.content{
-  min-width: 85%;
-  background-color: yellow;
-  min-height: 1600px;
-  right: 0;
-  padding-top: 65px;
-  display: block;
-  text-align: right;
-}
 .slider {
   margin: 0 auto;
   max-width: 1770px;
   height: 512px;
   background-color: green;
-
+  overflow:hidden;
 }
+
 .recommended, .art, .photography, .threeD{
   display: flex;
+  display: -webkit-flex;
   height: 260px;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
@@ -66,29 +16,8 @@ a {
   margin: 10px auto;
   border-radius: 15px;
 }
-.forward_btn {
-  height: 100%;
-  width: 50px;
-  border-left: 1px solid black;
-}
-.back_btn {
-  height: 100%;
-  width: 50px;
-  border-right: 1px solid black;
-}
 .popular {
   display: flex;
+  display: -webkit-flex;
   flex-direction: column;
-}
-.content_box {
-  height: 95%;
-  width: 15%;
-  background-color: blue;
-  margin: auto;
-  border-radius: 15px;
-}
-.footer {
-  width: 100%;
-  height: 256px;
-  background-color: #2f2f2f;
 }
