--- a/apps/startPage/templates/base/base.html
+++ b/apps/startPage/templates/base/base.html
@@ -22,15 +22,13 @@
   </div>
   <div class="main">
     <div class="side_menu">
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>Arts</li>
-          <li>Blog</li>
-          <li>Articles</li>
-          <li>FAG</li>
-        </ul>
-      </nav>
+      <ul class="side_navbar">
+        <li><h3><a href="#">Home</a></h3></li>
+        <li><h3><a href="#">Arts</a></h3></li>
+        <li><h3><a href="#">Blogs</a></h3></li>
+        <li><h3><a href="#">Articles</a></h3></li>
+        <li><h3><a href="#">F.A.G</a></h3></li>
+      </ul>
     </div>
     <div class="content">
       {% block content %}
