--- a/apps/startPage/static/base/css/style.css
+++ b/apps/startPage/static/base/css/style.css
@@ -41,7 +41,23 @@ a {
   min-height: 100%;
   width: 15%;
   background-color: #f2f2f2;
+  padding-top: 65px;
 }
+.side_navbar {
+  list-style: none;
+  width: 100%;
+}
+.side_navbar li {
+  padding: 20px 0;
+  text-align: center;
+}
+.side_navbar a {
+  color: #2f2f2f;
+}
+.side_navbar li:hover {
+  background-color: white;
+}
+
 .content{
   min-width: 85%;
   min-height: 1600px;
