--- a/apps/arts/templates/arts/all_arts_page.html
+++ b/apps/arts/templates/arts/all_arts_page.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html' %}
-{% block title %}Articles{% endblock %}
+{% block title %}Arts{% endblock %}
 {% block link %}{% endblock %}
 {% block content %}
 
