--- a/apps/startPage/templates/base/base.html
+++ b/apps/startPage/templates/base/base.html
@@ -23,11 +23,10 @@
   <div class="main">
     <div class="side_menu">
       <ul class="side_navbar">
-        <li><h3><a href="#">Home</a></h3></li>
-        <li><h3><a href="#">Arts</a></h3></li>
-        <li><h3><a href="#">Blogs</a></h3></li>
-        <li><h3><a href="#">Articles</a></h3></li>
-        <li><h3><a href="#">F.A.G</a></h3></li>
+        <li><h3><a href="{% url 'start_page_view' %}">Home</a></h3></li>
+        <li><h3><a href="{% url 'all_arts' %}">Arts</a></h3></li>
+        <li><h3><a href="{% url 'all_posts' %}">Blogs</a></h3></li>
+        <li><h3><a href="{% url 'all_articles' %}">Articles</a></h3></li>
       </ul>
     </div>
     <div class="content">
