--- a/apps/blog/templates/blog/all_posts_page.html
+++ b/apps/blog/templates/blog/all_posts_page.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html' %}
-{% block title %}Articles{% endblock %}
+{% block title %}Posts{% endblock %}
 {% block link %}{% endblock %}
 {% block content %}
 
