--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,14 +7,22 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{% block title %}{% endblock %}</title>
   <link href="{% static 'base/css/style.css' %}" rel="stylesheet" type='text/css'>
+  <link href="{% static 'base/css/all.min.css' %}" rel="stylesheet" type='text/css'>
   {% block link %}{% endblock %}
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
 </head>
 <body>
   <div class='header'>
     <div class="header_content">
-      <div class="menu">menu
-
+      <div class="user_panel">
+        <div class="user">
+          <a href="#"><i class="fas fa-user"></i></a>
+        </div>
+        <div class="notifications">
+          <a href="#"><i class="fas fa-bell"></i></a>
+        </div>
+        <div class="log_out">
+          <a href="#"><i class="fas fa-sign-out-alt"></i></a>
+        </div>
       </div>
       <div class="search"></div>
       <div class="logo">logo</div>
@@ -35,7 +43,12 @@
 
       {% endblock %}
       <div class="footer"></div>
+
     </div>
   </div>
+  <script src="{% static 'base/js/vue.min.js' %}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+  <script src="{% static 'base/js/script.js' %}"></script>
+  {% block script %}{% endblock %}
 </body>
 </html>
