--- a/static/base/css/style.css
+++ b/static/base/css/style.css
@@ -47,14 +47,40 @@ a {
   font-size: 42px;
   color: #4B4C4B;
 }
+.menu_btn {
+    display: none;
+    width: 35px;
+    height: 35px;
+    flex-direction: column;
+    Justify-content: space-around;
+    margin: auto 23px;
+}
+.menu_btn div {
+    height: 4px;
+    width: 35px;
+    display: none;
+    background-color: #2f2f2f;
+    border-radius: 25px;
+}
 .user, .notifications, .log_out {
   justify-content: center;
   position: relative;
   display: flex;
   align-items: center;
 }
-..log_out {
+.log_out {
   border-right: none;
+}
+.anonymous_panel {
+  margin: auto 23px;
+  width: 120px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.anonymous_panel a {
+  color: #2f2f2f;
 }
 .search {
   margin: auto 23px;
@@ -72,6 +98,11 @@ a {
   width: 15%;
   background-color: #f2f2f2;
   padding-top: 65px;
+
+  -webkit-transition: 0.8s;
+  -moz-transition: 0.8s;
+  -o-transition: 0.8s;
+  transition: 0.8s;
 }
 .side_navbar {
   list-style: none;
@@ -144,13 +175,38 @@ a {
   width: 960px;
   background-color: white;
   border-radius: 25px;
+  overflow: auto;
 
   -webkit-transition: 0.8s;
   -moz-transition: 0.8s;
   -o-transition: 0.8s;
   transition: 0.8s;
 }
-@media screen and (max-width: 980px) {
+@media only screen and (max-width: 980px) {
   .content_display {
-  width: 85%;}
+    width: 90%;}
+}
+.text_container {
+    margin: 0 30px;
+    padding: 25px 0;
+}
+/* хром, сафари */
+.content_display::-webkit-scrollbar { width: 0; }
+
+/* ie 10+ */
+.content_display { -ms-overflow-style: none; }
+
+@media only screen and (max-width: 1006px) {
+  .user_panel {
+  display: none;}
+
+  .side_menu {
+  display: none;}
+  .content {
+  width: 100%;}
+
+  .menu_btn {
+    display: flex;}
+  .menu_btn div {
+    display: block;}
 }
