--- a/templates/startPage/startPage.html
+++ b/templates/startPage/startPage.html
@@ -31,4 +31,6 @@
     <div class="content_box"></div><div class="content_box"></div><div class="content_box"></div>
   <div class="forward_btn"></div></div>
   </div>
+
+  <div class="notification"><p>Уведомление! Уведомление! Уведомление! Уведомление! Уведомление! Уведомление!</p></div>
 {% endblock %}
