--- a/templates/articles/all_articles_page.html
+++ b/templates/articles/all_articles_page.html
@@ -4,164 +4,16 @@
 {% block link %}<link rel="stylesheet" href="{% static 'articles/css/style.css' %}">{% endblock %}
 {% block content %}
     {% for state in article %}
-        <div class="article_box">{{ state.Title }}</div>
+        <div class="article_box" id="article_box">{{ state.Title }}
+        <button class="article_info" v-on:click="article_data()"></button>
+        </div>
     {% endfor %}
 {% endblock %}
 {% block container %}
-<div class="close_content_container"></div>
-<div class="content_container">
-    <div class="content_display">
-        <div class="text_container">
-            <h3>Title</h3>
-            <h6>Thesis</h6>
-            <p>
-                Написание текстов для главных страниц сайта – дело непростое. Проблема в том, что существует сразу несколько подходов к подготовке таких материалов.
-
-Каждый подход, как это и водится, имеет свои плюсы и минусы. Где-то можно выиграть в оптимизации, но потерять в живых читателях. Где-то можно приобрести живых читателей, но придется жертвовать SEO-показателями и, возможно, по этой причине отставать от конкурентов.
-
-Постоянные сомнения, касающиеся оптимальных путей создания текстов для главной, стали вполне привычными спутниками авторов.
-
-Кто-то постоянно работает под одной и той же схеме, кто-то мечется между SEO и продающими текстами, а кто-то и вовсе не имеет четкого видения. Чтобы хоть как-то определиться с тем, как писать тексты для главных страниц, мы составили эту небольшую заметку. На полноценный научный труд претендовать не собираемся, но кое-какие собственные наблюдения озвучим.
-
-Четыре вида текстов для главных страниц
-Для удобства мы разнесли «главные тексты» по 4 условным категориям. Сразу хотим предупредить, что категории это не обособленные: частенько можно встретить работы, которые вбирают в себя признаки сразу нескольких типов. Также здесь не упоминаются тексты для лендингов, где главная страница – основа основ. Речь пойдет об обычных, «классических» сайтах. Довольно демагогии с нашей стороны, приступаем.
-
-Короткие приветственные тексты
-
-Короткие (до 1 000 знаков) приветственные тексты на главную страницу могут позволить себе далеко не все сайты. Например, почти все крупные интернет-магазины, сайты компаний, серьезные сервисы и прочие подобные ресурсы обходятся без громоздких «простыней» текста. Пара слов о компании, небольшое приветствие и все.
-
-Короткие тексты размещают с одной целью – поприветствовать читателя и немного рассказать о себе. Собственно, именно так в идеале и должна выглядеть основная страница ресурса. Если бы не стремление поисковых систем высоко ранжировать запросы с главной страницы, думаю, 80% сайтов с радостью бы ограничивались скромным приветственным форматом.
-
-Реалии же таковы, что короткие тексты обычно встречаются на трастовых и уважаемых сайтах, которые прекрасно чувствуют себя в выдаче. Наверное, в число «счастливчиков» можно добавить еще ресурсы, привлекающие трафик с рекламы – им тоже вполне комфортно без больших текстов на главных страницах.
-
-Если же ресурс молодой и не слишком известный, редко кто упускает возможность дополнительно оптимизировать главную. Следовательно, материалы небольшого объема не подходят.
-
-Несколько примеров коротких приветственных текстов для главной страницы:
-
-
-                Наиболее популярный сегодня формат. Это обусловлено тем, что правильная оптимизация текста на главной странице способна существенно повысить приток пользователей из поисковых систем. Обычно на главной размещаются тексты с самыми популярными запросами. В зависимости от ниши, ключи могут быть ВЧ, СЧ и НЧ.
-
-Существуют как чистые SEO-тексты, в которых невооруженным взглядом видны одни и те же прописанные вхождения, так и комбинированные материалы, в которых применена щадящая оптимизация. Во втором случае обычно ставка делается не на многократное повторение нужного ключа, а на набор шлейфовых (похожих) запросов, которые в общей своей массе должны создать видимость максимально релевантного контента.
-
-Если копирайтер профессионален и понимает принципы современной оптимизации, можно создать достаточно неплохой SEO-текст, который будут читать не только поисковики, но и живые люди. В силу того, что поисковые системы любят высоко ранжировать большие тексты, такие материалы обычно имеют достаточно внушительные размеры (от 2 до 8 тысяч знаков).
-
-Тексты на главную страницу для интернет-магазинов, к примеру, делаются нередко по такой формуле: вверху – небольшой приветственный «кусочек», а в самом низу, вдалеке от глаз любопытных – SEO-простыня с нужными ключами. Впрочем, часто бывает, что SEO-текст ставится и на самое видное место главной страницы.
-
-Примеры:
-                Как уже ясно из названия, цель такого материала – максимально полно информировать пользователя о том, что представляет собой конкретный сайт. Естественно, материал также может быть оптимизирован, но чаще это все-таки какая-то щадящая оптимизация. То есть без многократного повторения одних и тех же ключей (особенно сложных), которые слишком уж убивают читабельность материала.
-
-Преимущество информационных текстов на главной странице в том, что они содержат реально полезную информацию, а не стандартный набор штампов для сокрытия ключевых запросов. Поскольку информация по-настоящему полезна, читатели задерживаются на главной странице сайта достаточно долго, что отлично сказывается на поведенческих факторах. Ну а там, где поведенческие факторы хорошие, поисковые системы сделают все, чтобы поднять сайт на самый верх.
-
-Один из наших любимых примеров информационной главной страницы – сайт Lurkmore, скриншот с которого мы и размещаем ниже:
-
-                Художественный стиль – это особый стиль речи, который получил широкое распространение как в мировой художественной литературе в целом, так и в копирайтинге в частности. Он характеризуется высокой эмоциональностью, прямой речью, богатством красок, эпитетов и метафор, а также призван воздействовать на воображение читателя и выступает в роли спускового крючка для его фантазии. Итак, сегодня мы подробно и на наглядных примерах рассматриваем художественный стиль текстов и его применение в копирайтинге.
-
-Особенности художественного стиля
-Как уже было сказано выше, художественный стиль наиболее часто используется в художественной литературе: романах, новеллах, рассказах, повестях и прочих литературных жанрах. Этому стилю не присущи оценочные суждения, сухость и официальность, которые свойственны научному и официально-деловому стилям. Вместо этого для него характеры повествование и передача мельчайших деталей, чтобы сформировать в воображении читателя филигранную форму передаваемой мысли.
-
-В контексте копирайтинга художественный стиль нашел новое воплощение в гипнотических текстах, которым на этом блоге посвящен целый раздел «Гипнотический копирайтинг». Именно элементы художественного стиля позволяют текстам воздействовать на лимбическую систему головного мозга читателя и запускать необходимые автору механизмы, благодаря которым достигается порой весьма любопытный эффект. Например, читатель не может оторваться от романа или у него возникает сексуальное влечение, а также другие реакции, о которых мы еще будем вести речь в последующих статьях.
-
-Элементы художественного стиля
-В любом художественном тексте присутствуют элементы, которые характерны для стиля его изложения. Для художественного стиля наиболее характерны:
-
-Детализация
-Передача чувств и эмоций автора
-Эпитеты
-Метафоры
-Сравнения
-Аллегория
-Использование элементов других стилей
-Инверсия
-Рассмотрим все эти элементы более подробно и на примерах.
-
-1. Детализация в художественном тексте
-Первое, что можно выделить во всех художественных текстах – это наличие подробностей, причем, практически ко всему.
-
-Пример художественного стиля №1
-
-Лейтенант шел по желтому строительному песку, нагретому дневным палящим солнцем. Он был мокрым от кончиков пальцев до кончиков волос, все его тело было усеяно царапинами от острой колючей проволоки и ныло от сводящей с ума боли, но он был жив и направлялся к командному штабу, который виднелся на горизонте метрах в пятистах.
-
-2. Передача чувств и эмоций автора
-Иногда в художественном тексте автор передает свои чувства и эмоции, чтобы сформировать у читателя нужное отношение к тем или иным описываемым объектам. Это отношение может быть как положительным, так и отрицательным.
-
-Пример художественного стиля №2
-
-Варенька, такая милая, добродушная и отзывчивая девушка, глаза которой всегда лучились добротой и теплом, с невозмутимым видом сущего демона шла к бару «Гадкий Гарри» с автоматом Томпсона наперевес, готовая укатать в асфальт этих мерзких, грязных, вонючих и скользких типов, посмевших пялиться на ее прелести и пускать похотливые слюни.
-
-3. Эпитеты
-Эпитеты наиболее характерны для художественных текстов, поскольку именно они отвечают за насыщенность лексики. Эпитеты могут быть выражены существительным, прилагательным, наречием или глаголом и чаще всего представляют собой связки слов, одно или несколько из которых дополняют другое.
-
-Примеры эпитетов
-
-Несказанно счастлива
-Люто ненавидеть
-Гул паровоза
-Зверский аппетит
-Волки сыты и т.д.
-Пример художественного стиля №3 (с эпитетами)
-
-Яша был всего лишь мелким пакостником, который, тем не менее, имел очень большой потенциал. Еще в розовом детстве он виртуозно тырил яблоки у тети Нюры, а не прошло и каких-то двадцати лет, как он с тем же лихим запалом переключился на банки в двадцати трех странах мира, причем умудрялся так мастерски их обчищать, что ни полиция, ни Интерпол никак не могли взять его с поличным.
-
-4. Метафоры
-Метафоры – это слова или выражения в переносном значении. Нашли широкое распространение среди классиков русской художественной литературы.
-
-Пример художественного стиля №4 (метафоры)
-
-Веня готов был лопнуть от смеха.
-Когда он ее увидел, через его тело прошел мощный электрический разряд.
-Его грызла совесть, долго и коварно.
-Когда она увидела цену, ее задушила жаба.
-Настроение у него было ужасным, и на душе скребли кошки.
-5. Сравнения
-Художественный стиль не был бы самим собой, если бы в нем не было сравнений. Это один из тех элементов, которые вносят в тексты особый колорит и образуют ассоциативные связи в воображении читателя.
-
-Примеры сравнений
-
-Голоден как волк.
-Неприступен как стена.
-Прекрасна, словно богиня.
-Маркиза переполнял душевный подъем, и казалось, он готов тотчас взлететь, словно ракета земля-воздух.
-Его мучила такая головная боль, будто его голова лежала между молотом и наковальней.
-6. Аллегория
-Аллегория – это представление чего-то абстрактного с помощью конкретного образа. Используется во многих стилях, но для художественного она особенно характерна.
-
-Примеры аллегорий
-
-Смерть – объятия Аида
-Сон – царство Морфея
-Неприступность – Форт Нокс
-Правосудие – Фемида
-И так далее. Как правило, аллегории представляют собой устойчивые словосочетания и неразрывно ассоциируются с соответствующими им абстрактными понятиями.
-
-7. Использование элементов других стилей
-Наиболее часто этот аспект проявляется в прямой речи, когда автор передает слова того или иного персонажа. В таких случаях, в зависимости от типа, персонаж может использовать любой из стилей речи, однако наиболее популярным в этом случае является разговорный.
-
-Пример художественного стиля №5
-
-Монах выхватил посох и встал на пути нарушителя:
-
-– Зачем ты пришел к нам в монастырь? – спросил он.
-– Какое тебе дело, пшел вон с дороги! – огрызнулся чужак.
-– Уууу…– Многозначительно протянул монах. – Похоже, манерам тебя не учили. Ладно, я сегодня как раз в настроении, преподам тебе несколько уроков.
-– Ты меня достал, монах, ангард! – прошипел незваный гость.
-– Моя кровь начинает играть! – с восторгом простонал церковник, – Пожалуйста, постарайся не разочаровать меня.
-
-С этими словами оба сорвались со своих мест и сцепились в беспощадной схватке.
-
-8. Инверсия
-Инверсия – это использование обратного порядка слов для усиления тех или иных фрагментов и придания словам особой стилистической окраски.
-
-Примеры инверсии
-
-Итак, звалась она Татьяной…
-Мудрости потоки отрокам впитывать пора начать бы
-Не к месту глупостью тягаться
-Выводы
-В художественном стиле текстов могут встречаться как все из перечисленных элементов, так и только некоторые из них. Каждый выполняет определенную функцию, но все служат одной цели: насытить текст и наполнить его красками, чтобы максимально вовлечь читателя в передаваемую атмосферу.
-
-Мастера художественного жанра, чьи шедевры люди читают, не отрываясь, используют ряд гипнотических техник, которые более подробно будут раскрыты в последующих статьях. Подпишитесь на RSS или на email рассылку снизу, следуйте за блогом в твиттере, и Вы ни за что их не пропустите.
-            </p>
-         </div>
-    </div>
-</div>
+{% verbatim %}
+    <v-popup
+            v-if="isInfoArticle"
+    />
+{% endverbatim %}
 {% endblock %}
+{% block script %}<script src="{% static 'articles/script.js' %}"></script>{% endblock %}
